--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# As the Picnic Day Parade Director for 2019, I wanted to streamline the process of calculating how much space each Parade participant requires because I did not want my Assistant Directors and I to calculate sqaure footages by hand. 
+# As the Picnic Day Parade Director for 2019, I wanted to streamline the process of calculating how much space each Parade participant requires because I did not want my Assistant Directors and me to calculate square footages by hand. 
 
 # See it in action: https://www.youtube.com/watch?v=gjMNwZbPbVA
 
